# gayrpc

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  sonar-project.properties  vcpkg.json
.github/workflows/: build_and_test.yml
core_proto/: gayrpc_option.proto  meta.proto
dep/ananas/include/ananas/future/: Future.h  Try.h
examples/benchmark/: BenchmarkClient.cpp  BenchmarkServer.cpp  CMakeLists.txt  WaitGroup.h
examples/benchmark/pb/: benchmark_service.gayrpc.h  benchmark_service.pb.cc  benchmark_service.pb.h  benchmark_service.proto
examples/echo/: CMakeLists.txt  EchoClient.cpp  EchoServer.cpp  SyncEchoClient.cpp
examples/echo/pb/: echo_service.gayrpc.h  echo_service.pb.cc  echo_service.pb.h  echo_service.proto
include/: GayRpcClient.h  GayRpcCore.h  GayRpcError.h  GayRpcHelper.h  GayRpcReply.h  GayRpcService.h  GayRpcTypeHandler.h  gayrpc_option.pb.cc  gayrpc_option.pb.h  meta.pb.cc  meta.pb.h
src/gayrpc/core/: GayRpcClient.h  GayRpcError.h  GayRpcHelper.h  GayRpcInterceptor.h  GayRpcReply.h  GayRpcService.h  GayRpcType.h  GayRpcTypeHandler.h  gayrpc_meta.pb.cc  gayrpc_meta.pb.h  gayrpc_meta.proto  gayrpc_option.pb.cc  gayrpc_option.pb.h  gayrpc_option.proto  meta.pb.h
src/gayrpc/protocol/: BinaryProtocol.h  HttpProtocol.h
src/gayrpc/utils/: UtilsInterceptor.h  UtilsWrapper.h
tests/: CMakeLists.txt  TestInterceptor.cpp  TestOrleans.cpp  TestRPC.cpp  catch.hpp
tests/pb/: echo_service.gayrpc.h  echo_service.pb.h  orleans_service.gayrpc.h  orleans_service.pb.cc  orleans_service.pb.h  orleans_service.proto
utils/: GayRpcInterceptor.h  OpPacket.h  UtilsDataHandler.h  UtilsInterceptor.h  UtilsWrapper.h
vcpkg/overlay/folly/: CONTROL  missing-include-atomic.patch  portfile.cmake
