enable_testing()

add_executable(test_interceptor TestInterceptor.cpp)
if(WIN32)
  target_link_libraries(test_interceptor ws2_32)
elseif(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(test_interceptor PRIVATE pthread)
endif()
target_link_libraries(test_interceptor PRIVATE gayrpc protobuf::libprotobuf Folly::folly Folly::folly_deps)
add_test(TestInterceptor test_interceptor)

add_executable(test_rpc ./pb/echo_service.pb.cc TestRPC.cpp)
if(WIN32)
  target_link_libraries(test_rpc ws2_32)
elseif(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(test_rpc PRIVATE pthread)
endif()
target_link_libraries(test_rpc PRIVATE gayrpc protobuf::libprotobuf Folly::folly Folly::folly_deps)
add_test(TestRPC test_rpc)